--- a/merge_geocoded.ipynb
+++ b/merge_geocoded.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "[0 rows x 29 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unit</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>sale_date</th>\n",
+       "      <th>parcel</th>\n",
+       "      <th>category</th>\n",
+       "      <th>sale_price</th>\n",
+       "      <th>street_no</th>\n",
+       "      <th>price_per_sf</th>\n",
+       "      <th>living_area</th>\n",
+       "      <th>total_room_num</th>\n",
+       "      <th>...</th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>exterior_condition</th>\n",
+       "      <th>foundation</th>\n",
+       "      <th>full_address</th>\n",
+       "      <th>owner_name</th>\n",
+       "      <th>owner_property_count</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>properties</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [unit, street_name, sale_date, parcel, category, sale_price, street_no, price_per_sf, living_area, total_room_num, bedrooms, bathrooms, half_bathrooms, kitchens, fireplaces, ac_type, heat_type, interior_condition, parking_spots, year_built, exterior_condition, foundation, full_address, owner_name, owner_property_count, x, y, properties, year]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"sale_price\"].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unit</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>sale_date</th>\n",
+       "      <th>parcel</th>\n",
+       "      <th>category</th>\n",
+       "      <th>sale_price</th>\n",
+       "      <th>street_no</th>\n",
+       "      <th>price_per_sf</th>\n",
+       "      <th>living_area</th>\n",
+       "      <th>total_room_num</th>\n",
+       "      <th>...</th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>exterior_condition</th>\n",
+       "      <th>foundation</th>\n",
+       "      <th>full_address</th>\n",
+       "      <th>owner_name</th>\n",
+       "      <th>owner_property_count</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>properties</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [unit, street_name, sale_date, parcel, category, sale_price, street_no, price_per_sf, living_area, total_room_num, bedrooms, bathrooms, half_bathrooms, kitchens, fireplaces, ac_type, heat_type, interior_condition, parking_spots, year_built, exterior_condition, foundation, full_address, owner_name, owner_property_count, x, y, properties, year]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# change sale_price to float\n",
+    "data[\"sale_price\"] = data[\"sale_price\"].str.replace(',', '').astype(float)\n",
+    "data[\"sale_price\"].isna()\n",
+    "data[data[\"sale_price\"].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -715,6 +862,132 @@
     "data_no_na = data[data[\"bedrooms\"].notna()]\n",
     "\n",
     "print(data_no_na.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2046\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/wy/50c5sv7n4wsfhhww_wwjz2tr0000gn/T/ipykernel_21204/776181895.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_no_na['modified_z'] = 0.6745 * (data_no_na['sale_price'] - median) / mad\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Calculate the median and MAD\n",
+    "median = data_no_na['sale_price'].median()\n",
+    "mad = np.median(np.abs(data_no_na['sale_price'] - median))\n",
+    "\n",
+    "# Step 2: Calculate Modified Z-scores\n",
+    "data_no_na['modified_z'] = 0.6745 * (data_no_na['sale_price'] - median) / mad\n",
+    "\n",
+    "# Step 3: Filter out outliers\n",
+    "threshold = 3.5\n",
+    "data_no_na_no_outliers = data_no_na[np.abs(data_no_na['modified_z']) <= threshold].copy()\n",
+    "\n",
+    "# check how many rows are removed\n",
+    "print(data_no_na.shape[0] - data_no_na_no_outliers.shape[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     unit      street_name   sale_date        parcel       category  \\\n",
+      "0      RD        BEACHVIEW   6/20/2019  01-02114-000  single_family   \n",
+      "1      ST       Bennington   6/27/2019  01-06784-000  single_family   \n",
+      "2      ST            EUTAW    3/8/2019  01-02831-000  single_family   \n",
+      "3      ST          Everett   6/21/2019  01-04931-000  single_family   \n",
+      "4      ST          Everett    6/4/2019  01-05187-010  single_family   \n",
+      "...   ...              ...         ...           ...            ...   \n",
+      "3156  NaN      NONANTUM ST  11/27/2023  22‐04490‐000     two_family   \n",
+      "3157  NaN      NONANTUM ST   9/28/2023  22‐03741‐000     two_family   \n",
+      "3158  NaN    OAK SQUARE AV   4/14/2023  22‐03853‐000     two_family   \n",
+      "3159  NaN       Parsons ST   3/30/2023  22‐04322‐000     two_family   \n",
+      "3160  NaN  PRESENTATION RD  12/21/2023  22‐03588‐000     two_family   \n",
+      "\n",
+      "      sale_price  street_no price_per_sf  living_area  total_room_num  ...  \\\n",
+      "0       725000.0         56       473.24       1532.0             7.0  ...   \n",
+      "1       510000.0        177       522.54        976.0             6.0  ...   \n",
+      "2       650000.0         73       346.11       1878.0             7.0  ...   \n",
+      "3       445000.0         15       523.53        850.0             4.0  ...   \n",
+      "4       725200.0        172       479.63       1512.0             7.0  ...   \n",
+      "...          ...        ...          ...          ...             ...  ...   \n",
+      "3156   1000000.0         12       355.37       2814.0            14.0  ...   \n",
+      "3157    875000.0        135       376.34       2325.0            10.0  ...   \n",
+      "3158    900000.0         48       407.61       2208.0            12.0  ...   \n",
+      "3159    875000.0         96        385.8       2268.0             8.0  ...   \n",
+      "3160   1095000.0         40       436.95       2506.0            12.0  ...   \n",
+      "\n",
+      "      year_built  exterior_condition      foundation  \\\n",
+      "0           1930                Good           Brick   \n",
+      "1           1920             Average  Concrete Block   \n",
+      "2           1880             Average           Brick   \n",
+      "3           1861             Average           Brick   \n",
+      "4           2003                Good        Concrete   \n",
+      "...          ...                 ...             ...   \n",
+      "3156        1910                Good           Stone   \n",
+      "3157        1890                Good           Stone   \n",
+      "3158        1890             Average           Stone   \n",
+      "3159        1935             Average  Concrete Block   \n",
+      "3160        1925             Average        Concrete   \n",
+      "\n",
+      "                               full_address                owner_name  \\\n",
+      "0          56  BEACHVIEW RD BOSTON MA 02128            SMITH DARRIN E   \n",
+      "1        177  BENNINGTON ST BOSTON MA 02128           HUTCHINS DANIEL   \n",
+      "2              73  EUTAW ST BOSTON MA 02128        BAILEY JOHN DANIEL   \n",
+      "3            15  EVERETT ST BOSTON MA 02128             BANKS CHLOE F   \n",
+      "4           172  EVERETT ST BOSTON MA 02128         KWOK LIVING TRUST   \n",
+      "...                                     ...                       ...   \n",
+      "3156        12  NONANTUM ST BOSTON MA 02135           12 NONANTUM LLC   \n",
+      "3157    135-137 NONANTUM ST BOSTON MA 02135         MCCARTHY PATRICIA   \n",
+      "3158      48  OAK SQUARE AV BOSTON MA 02135  48 OAK SQUARE AVENUE LLC   \n",
+      "3159       96-98 PARSONS ST BOSTON MA 02135          CHOWDHURY ISMAIL   \n",
+      "3160  40-42 PRESENTATION RD BOSTON MA 02135     WANG/REN FAMILY TRUST   \n",
+      "\n",
+      "     owner_property_count          x          y  properties  year  \n",
+      "0                     1.0 -71.004060  42.391103         NaN  2019  \n",
+      "1                     1.0 -71.032457  42.377267         NaN  2019  \n",
+      "2                     1.0 -71.036596  42.379562         NaN  2019  \n",
+      "3                     1.0 -71.037049  42.368493         NaN  2019  \n",
+      "4                     2.0 -71.031925  42.366315         NaN  2019  \n",
+      "...                   ...        ...        ...         ...   ...  \n",
+      "3156                  1.0 -71.168387  42.350199         NaN  2023  \n",
+      "3157                  3.0 -71.174358  42.350243         NaN  2023  \n",
+      "3158                  1.0 -71.163746  42.351469         NaN  2023  \n",
+      "3159                  1.0 -71.154403  42.353620         NaN  2023  \n",
+      "3160                  1.0 -71.171281  42.354111         NaN  2023  \n",
+      "\n",
+      "[27567 rows x 29 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Optional: Drop the helper column\n",
+    "data_no_na_no_outliers.drop(columns='modified_z', inplace=True)\n",
+    "\n",
+    "print(data_no_na_no_outliers)\n"
    ]
   },
   {
