Save macro data

--- a/merge_geocoded.ipynb
+++ b/merge_geocoded.ipynb
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,6 +1000,85 @@
     "data_no_na.to_csv(\"sales_boston_geocoded.csv\", index=False)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unit</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>sale_date</th>\n",
+       "      <th>parcel</th>\n",
+       "      <th>category</th>\n",
+       "      <th>sale_price</th>\n",
+       "      <th>street_no</th>\n",
+       "      <th>price_per_sf</th>\n",
+       "      <th>living_area</th>\n",
+       "      <th>total_room_num</th>\n",
+       "      <th>...</th>\n",
+       "      <th>exterior_condition</th>\n",
+       "      <th>foundation</th>\n",
+       "      <th>full_address</th>\n",
+       "      <th>owner_name</th>\n",
+       "      <th>owner_property_count</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>properties</th>\n",
+       "      <th>year</th>\n",
+       "      <th>modified_z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [unit, street_name, sale_date, parcel, category, sale_price, street_no, price_per_sf, living_area, total_room_num, bedrooms, bathrooms, half_bathrooms, kitchens, fireplaces, ac_type, heat_type, interior_condition, parking_spots, year_built, exterior_condition, foundation, full_address, owner_name, owner_property_count, x, y, properties, year, modified_z]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_no_na[data_no_na[\"sale_price\"].isna() | data_no_na[\"bedrooms\"].isna() | data_no_na[\"living_area\"].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
